# scan_to_plan

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  mkdocs.yml  objects.inv  pyproject.toml  scan2plan.spec  setup.bat  setup.sh
.github/workflows/: ci.yml  release-exe.yml
api/: config.html  detection.html  io.html  pipeline.html  qa.html  vectorization.html
config/: default_params.yaml
config/profiles/: ancien.yaml  bureau.yaml  recent.yaml
dev/: contributing.html
docs/: CNAME  index.md
docs/api/: config.md  detection.md  io.md  pipeline.md  qa.md  vectorization.md
docs/dev/: architecture.md  contributing.md  tests.md
docs/guide/: configuration.md  formats.md  installation.md  profiles.md  quickstart.md
docs/pipeline/: overview.md  parameters.md
guide/: formats.html  installation.html  quickstart.html
scripts/: analyze_z_distribution.py  debug_pipeline.py  diagnose_hough.py  export_plan_png.py  find_building_bbox.py  inspect_density_map.py  inspect_e57.py  preview_dxf.py  reprocess_from_npy.py  show_binary_and_segments.py  visualize_slice.py
search/: search_index.json
site/: index.html  objects.inv
site/api/: config.html  detection.html  io.html  pipeline.html  qa.html  vectorization.html
site/dev/: architecture.html  tests.html
site/guide/: configuration.html  profiles.html
site/pipeline/: overview.html  parameters.html
site/search/: search_index.json
src/scan2plan/: __init__.py  cli.py  config.py  config_profiles.py  pipeline.py  runtime_paths.py
src/scan2plan/detection/: __init__.py  curved_walls.py  line_detection.py  micro_fusion.py  morphology.py  multi_slice_filter.py  openings.py  orientation.py  segment_cleanup.py  segment_fusion.py
src/scan2plan/io/: __init__.py  dxf_face_export.py  readers.py  writers.py
src/scan2plan/preprocessing/: __init__.py  downsampling.py  floor_ceiling.py  outlier_removal.py
src/scan2plan/qa/: __init__.py  metrics.py  validator.py  zone_scoring.py
src/scan2plan/slicing/: __init__.py  density_map.py  slicer.py
src/scan2plan/utils/: __init__.py  coordinate.py  geometry.py  visualization.py
src/scan2plan/vectorization/: __init__.py  angular_regularization.py  light_topology.py  regularization.py  topology.py  wall_builder.py  wall_pairing.py
tests/: conftest.py  test_pipeline.py
tests/benchmarks/: bench_pipeline.py
tests/fixtures/: __init__.py  generate_fixtures.py  simple_room.npy
tests/test_config/: test_profiles.py  test_runtime_paths.py
tests/test_detection/: test_curved_walls.py  test_line_detection.py  test_micro_fusion.py  test_morphology.py  test_multi_slice_filter.py  test_openings.py  test_segment_cleanup.py  test_segment_fusion.py
tests/test_io/: test_dxf_face_export.py  test_readers.py  test_writers.py
tests/test_preprocessing/: test_downsampling.py  test_floor_ceiling.py  test_outlier_removal.py
tests/test_qa/: test_validator.py  test_zone_scoring.py
tests/test_slicing/: test_density_map.py  test_slicer.py
tests/test_utils/: test_geometry.py
tests/test_vectorization/: test_angular_regularization.py  test_light_topology.py  test_regularization.py  test_topology.py  test_wall_builder.py  test_wall_pairing.py
